[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.12"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}

# Hemos eliminado las dependencias de desarrollo que causaban el conflicto.
[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"